[package]
name = "tiny-p2p-node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
libp2p = { version = "0.56.0", features = ["tokio", "tcp", "noise", "yamux", "macros", "ping", "identify", "mdns", "gossipsub"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
